spell check and spacing fix

--- a/Assets/CSS/stylesheet.css
+++ b/Assets/CSS/stylesheet.css
@@ -114,7 +114,7 @@
   }
   
   .footer-text-left {
-    font-size: 25px;
+    font-size: 22px;
     padding-left: 40px;
     float: left;
     word-spacing: 20px;
